# f446-quickstart

./: Cargo.toml  README.md  cargo-generate.toml  memory.x
.cargo/: config
src/: main.rs
